--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -10,10 +10,40 @@
     margin-top: 5%
 }
 
-#reviews {
+#reviews, #parses-container, #products-table {
+    max-height: 600px;
+    overflow: auto;
     text-align: left;
 }
 
 .row {
     width: 100%;
+    margin-left: 0.2%;
 }
+
+.stars-count, .likes-count {
+    margin-left: 5px;
+}
+
+.left-element {
+    margin-left: 80%;
+    display: inherit;
+}
+
+.comment-body {
+    margin-top: 10px;
+}
+
+.stars-element {
+    margin-left: 80%;
+}
+
+.author {
+    margin-left: 5px;
+}
+
+.author b {
+    font-weight: bold;
+    font-size: 1rem;
+}
+
